adding the holder class

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LIttle italy Pizeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <div class="container body">
+<body class="body">
+    <div>
     <div class="navbar">
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -22,6 +22,12 @@
               <a class="nav-link" href="#">Contact Us</a>
             </li>
         </ul>
+    </div>
+    <div class="holder">
+        <div>
+            <select name="" id=""></select>
+        </div>
+
     </div>
 </div>
 </body>
