adding rows to the holder div

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         </ul>
     </div>
     <div class="holder">
+        
         <div>
+            <row></row>
+            <row></row>
+            <row></row>
             <select name="" id=""></select>
         </div>
 
