added the about us section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body class="body">
     <div>
+        <img src="./Images/pizzaimg.jpeg">
+    </div>
+    <div>
     <div class="navbar">
         <ul class="nav flex-column">
             <li class="nav-item">
@@ -22,6 +25,16 @@
               <a class="nav-link" href="#">Contact Us</a>
             </li>
         </ul>
+    </div>
+    <div class="container-fluid about">
+        <h1>ABOUT Us</h1>
+        <p>Pizza Deliciosa Restaurants that has been 
+            in pizza business for over 10years now and offers <br>
+            a very unique atmosphere for customers in addition to home 
+            delivery services for all pizza orders <br> and we know that pizza is a 
+            family meal which popular around <br> the world and that has resulted in a 
+            large number of chains of pizza <br>
+            restaurants but non of them is the best than Pizza Deliciosa.</p>
     </div>
     
         <h3 class= "text-center mt-4">Order Here</h3>
