adde the add another button

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                             Salami - 300                        
                         </option>
                     </select> <br> <br>
+                    <button type="order" value="another">Add Another</button><br><br>
                     <button type="submit" value="send">Place Order</button><br><br>
+                    <button type="summary" value="display">Checkout</button><br><br>
                         </form>
                 </div>
             </section>
@@ -125,7 +127,7 @@
                     Little-Italy Pizeria
                     &copy; 2022
                     <br>
-                    <a href="">Terms Of Service</a>
+                    <a href="janongii012@gmail.com">Customer Care</a>
                 </center>
             </footer>
         </main>
