added adding js functions

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         <option value="Dine-In">
                             Dine-In
                         </option>
-                        <option value="Dine-In">
+                        <option value="delivery">
                             Delivery
                         </option>
-                        <option value="Dine-In">
+                        <option value="take-away">
                             Take-Away
                         </option>
 
@@ -116,7 +116,7 @@
                         </form>
                 </div>
             </section>
-            <footer>
+            <footer class="foot">
                 <center>
                     Little-Italy Pizeria
                     &copy; 2022
