--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <section>                                                      
                    
              <div class="rect"> 
+                 <h2><center>Little-Italy</center> <strong></strong> </h2>
                 <div class="Size">
                     <h4>Size</h4>
                     <select>
@@ -93,7 +94,7 @@
                                 <strong>Little-Italy Pizeria</strong> 
                                 &copy; <strong>2022</strong> 
                                 <br>
-                                <a href=""><strong>Customer Care: janongii012@gmail.com</strong> </a>
+                                <a href=""><strong>Customer Care: <br> janongii012@gmail.com</strong> </a>
                             </center>
                             
                         </footer>
