changing background color

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
             <section>
                 <h2 class="header"><center>WELCOME TO LITTLE ITALY Pizeria!</center></h2><br>
                 <h4><center>Come and get some.</center></h4><br>
-                <h3><center>Place Order</center></h3>
+                <h3><center>Place Order below</center></h3>
             </section>
             <section>                                                      
                    
              <div class="rect"> 
-                 <h2><center>Little-Italy</center> <strong></strong> </h2>
-                <div class="Size">
+                 <div class="Size">
                     <h4>Size</h4>
                     <select>
                         <option value="Small">
@@ -89,12 +88,13 @@
                     <button type="submit" value="send">Place Order</button><br><br>
                     <button type="summary" value="display">Checkout</button><br><br>
                         </form>
-                        <footer class="foot"white>
+                        <footer class="foot">
                             <center>
                                 <strong>Little-Italy Pizeria</strong> 
                                 &copy; <strong>2022</strong> 
                                 <br>
-                                <a href=""><strong>Customer Care: <br> janongii012@gmail.com</strong> </a>
+                                <br>
+                                <a href=""><strong>Customer Care: <br> <br> janongii012@gmail.com</strong> </a>
                             </center>
                             
                         </footer>
