--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         var button = document.getElementById("btn2");
                         var crust = document.getElementById("crust");
                         var Size = document.getElementById("size");
-                        var pricing document.getElementById("number");
+                        var pricing = document.getElementById("number");
                         var toppings = document.getElementById("toppings");
                         
                        button.addEventListener("onClick",function(){
